@@ -1,3 +1,9 @@
+2001-05-04  John Harper  <jsh@eazel.com>
+
+	* keys.h, keys.c: added support for Off2 and Off3 event types
+	(button release events). Also changed it so that Click1 events
+	now print as `Click'
+
 2001-04-22  John Harper  <jsh@eazel.com>
 
 	* colors.c (colors_init): use `#000000' instead of `black'.
